--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,13 +22,11 @@
         <a href="{{ site.github.url }}"> <h1>{{ site.title | default: site.github.repository_name }}</h1> </a>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        {% if site.github.is_project_page %}
-          <p class="view"><a href="{{ site.github.repository_url }}">Veja o projeto no GitHub <small>{{ github_name }}</small></a></p>
-        {% endif %}
-
+          <p class="view"><a href="{{ site.github.repository_url }}">Veja o projeto no GitHub.<small>{{ github_name }}</small></a></p>
+        <!--
         {% if site.github.is_user_page %}
-          <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
+          <p class="view"><a href="{{ site.github.owner_url }}">Veja o projeto no GitHub</a></p>
+        {% endif %}-->
          {% if site.show_pages %}
           <ul>
             <li><a href="{{ '/demo.html' | relative_url }}">v0.0.1 <strong>Demo</strong></a></li>
@@ -43,9 +41,9 @@
 
       </section>
       <footer>
-        {% if site.github.is_project_page %}
+        <!--{% if site.github.is_project_page %}
         <p>Esse projeto é mantido por <a href="http://labfgv.com.br">{{ site.github.owner_name }}</a>.</p>
-        {% endif %}
+        {% endif %}-->
         <p>Contato: <a href="mailto:labfgv+doliberto@gmail.com">labfgv+doliberto@gmail.com</a></p>
         <p>Facebook: <a href="https://fb.com/LABFGV">https://fb.com/LABFGV</a></p>
         <p><small>Hospedado por GitHub Pages &mdash;<br>Tema por <a href="https://github.com/orderedlist">orderedlist</a>.</small></p>
